# ReRoute.AI

./: .gitignore  README.md  render.yaml
reroute-ai/: .env.production.example  .gitignore  docker-compose.prod.yml  render.yaml
reroute-ai/backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
reroute-ai/docs/: DEPLOY.md  DEPLOY_VERCEL_RENDER.md
reroute-ai/frontend/: Dockerfile  next.config.mjs
reroute-ai/scripts/: Get-RenderCli.ps1  Load-DotEnv.ps1  deploy-render.ps1  deploy-vercel.ps1  deploy.ps1  render.ps1  set-render-env.ps1
